--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="author" content="無名" />
+  <meta name="author" content="小白^卟白" />
   <title>一个导航 - OneNav</title>
   <meta name="keywords" content="网址导航">
   <meta name="description" content="OneNav">
@@ -180,13 +180,13 @@
       <nav class="navbar user-info-navbar" id="navbar" role="navigation">
         <ul class="user-info-menu left-links list-inline list-unstyled">
           <li class="menu-item">
-            <a href="https://www.imsyy.top" target="_black">
+            <a href="https://one.hylove.top" target="_black">
               <i class="fa-solid fa-house"></i>
               <span>主站</span>
             </a>
           </li>
           <li class="menu-item">
-            <a href="https://blog.imsyy.top" target="_black">
+            <a href="https://hylove.top" target="_black">
               <i class="fa-solid fa-blog"></i>
               <span>博客</span>
             </a>
@@ -281,8 +281,8 @@
     <!-- Add your copyright text here -->
     <p>
       
-      &copy; 2020 - 2022
-      <a href="https://www.imsyy.top" target="_blank"><strong>無名</strong></a> | Design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a> | Power by <a href="https://hexo.io/" target="_blank"><strong>Hexo</strong></a> & <a href="https://github.com/HCLonely/hexo-theme-webstack/" target="_blank"><strong>hexo-theme-webstack</strong></a>
+      &copy; 2021 - 2024
+      <a href="https://x.imsyy.top" target="_blank"><strong>小白^卟白</strong></a> | Design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a> | Power by <a href="https://hexo.io/" target="_blank"><strong>Hexo</strong></a> & <a href="https://github.com/HCLonely/hexo-theme-webstack/" target="_blank"><strong>hexo-theme-webstack</strong></a>
     </p>
     <!-- <div class="go-up">
       <a href="#" rel="go-top">
