--- a/about/index.html
+++ b/about/index.html
@@ -282,7 +282,7 @@
     <p>
       
       &copy; 2021 - 2024
-      <a href="https://x.imsyy.top" target="_blank"><strong>小白^卟白</strong></a> | Design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a> | Power by <a href="https://hexo.io/" target="_blank"><strong>Hexo</strong></a> & <a href="https://github.com/HCLonely/hexo-theme-webstack/" target="_blank"><strong>hexo-theme-webstack</strong></a>
+      <a href="https://x.hylove.top" target="_blank"><strong>小白^卟白</strong></a> | Design by <a href="http://viggoz.com" target="_blank"><strong>Viggo</strong></a> | Power by <a href="https://hexo.io/" target="_blank"><strong>Hexo</strong></a> & <a href="https://github.com/HCLonely/hexo-theme-webstack/" target="_blank"><strong>hexo-theme-webstack</strong></a>
     </p>
     <!-- <div class="go-up">
       <a href="#" rel="go-top">
